<resources>
    <string name="app_name">campus bay</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="cbay">campus bay</string>
    <string name="title_activity_login">Login</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginsocial">Login with social media</string>
    <string name="sign">sign up</string>
    <string name="confirm">Confirm Password</string>
    <string name="pas">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="sub">submit</string>
    <string name="can">cancel</string>
</resources>
